--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <li><a href="#xizmatlar">Xizmatlarimiz</a></li>
                 <li><a href="#imtiyozlar">Imtiyozlar</a></li>
                 <li><a href="#tolovlar">To'lovlar</a></li>
-                <li><a href="../login/index.html" class="entrance">Kirish</a></li>
+                <li><a href="./login/login.html" class="entrance">Kirish</a></li>
             </ul>
         </nav>
     </header>
