--- a/login/login.html
+++ b/login/login.html
@@ -10,31 +10,22 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <!-- css link -->
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./login.css">
         <!-- favicon link -->
         <link rel="icon" type="image/x-icon" href="../images/favicon.png">
-    
     </head>
     <body>
         <!-- load -->
         <div id="load"></div>
-
         <form action="#">
             <div class="form-left">
-                <img src="../images/room11.jpg" title="form-left-img" alt="form-left-img">
+                <img src="../images/room8.jpg" title="form-left-img" alt="form-left-img">
             </div>
             <div class="form-right">
                 <div class="form-right-text">
-                    <h1>Hisob yarating</h1>
+                    <h6>Qaytib kelganingizdan xursandmiz</h6>
+                    <h1>Hisobingizga kiring</h1>
                 </div>
-                <label for="FirstName">
-                    <h5>Ism</h5>
-                    <input name="FirstName" type="text" required>
-                </label>
-                <label for="LastName">
-                    <h5>Familya</h5>
-                    <input name="LastName" type="text" required>
-                </label>
                 <label for="email">
                     <h5>Email</h5>
                     <input name="email" type="email" required placeholder="John.snow@gmail.com">
@@ -48,16 +39,18 @@
                         <input type="radio" required title="Eslab qol">
                         <h6>Eslab qol</h6>
                     </div>
-
+                    <div class="forgot-pas">
+                        <h6 title="Parolni unutdingizmi?">Parolni unutdingizmi?</h6>
+                    </div>
                 </div>
                 <div class="form-button">
-                    <a type="submit" title="Ro'yxatdan o'tish">Ro'yxatdan o'tish</a>
-                    <a href="../login/index.html" type="submit" title="Hisob bormi">
-                        Hisob bormi
+                    <a type="submit" title="Hozir kirish">Hozir kirish</a>
+                    <a href="../signup/signup.html" title="Ro'yxatdan o'tish">
+                        Ro'yxatdan o'tish
                     </a>
                 </div>
                 <div class="dont-account">
-                    <a href="../home/index.html" title="Bosh sahifa">Bosh sahifa</a>
+                    <a href="../index.html" title="Bosh sahifa">Bosh sahifa</a>
                 </div>
             </div>
         </form>
