--- a/signup/signup.html
+++ b/signup/signup.html
@@ -10,22 +10,31 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <!-- css link -->
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./signup.css">
         <!-- favicon link -->
         <link rel="icon" type="image/x-icon" href="../images/favicon.png">
+    
     </head>
     <body>
         <!-- load -->
         <div id="load"></div>
+
         <form action="#">
             <div class="form-left">
-                <img src="../images/room8.jpg" title="form-left-img" alt="form-left-img">
+                <img src="../images/room11.jpg" title="form-left-img" alt="form-left-img">
             </div>
             <div class="form-right">
                 <div class="form-right-text">
-                    <h6>Qaytib kelganingizdan xursandmiz</h6>
-                    <h1>Hisobingizga kiring</h1>
+                    <h1>Hisob yarating</h1>
                 </div>
+                <label for="FirstName">
+                    <h5>Ism</h5>
+                    <input name="FirstName" type="text" required>
+                </label>
+                <label for="LastName">
+                    <h5>Familya</h5>
+                    <input name="LastName" type="text" required>
+                </label>
                 <label for="email">
                     <h5>Email</h5>
                     <input name="email" type="email" required placeholder="John.snow@gmail.com">
@@ -39,18 +48,16 @@
                         <input type="radio" required title="Eslab qol">
                         <h6>Eslab qol</h6>
                     </div>
-                    <div class="forgot-pas">
-                        <h6 title="Parolni unutdingizmi?">Parolni unutdingizmi?</h6>
-                    </div>
+
                 </div>
                 <div class="form-button">
-                    <a type="submit" title="Hozir kirish">Hozir kirish</a>
-                    <a href="../signup/index.html" title="Ro'yxatdan o'tish">
-                        Ro'yxatdan o'tish
+                    <a type="submit" title="Ro'yxatdan o'tish">Ro'yxatdan o'tish</a>
+                    <a href="../login/login.html" type="submit" title="Hisob bormi">
+                        Hisob bormi
                     </a>
                 </div>
                 <div class="dont-account">
-                    <a href="../home/index.html" title="Bosh sahifa">Bosh sahifa</a>
+                    <a href="../index.html" title="Bosh sahifa">Bosh sahifa</a>
                 </div>
             </div>
         </form>
