--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="carousel-inner main-carousel">
             <div class="carousel-item active">
-                <img src="../images/slider1.jpg" class="d-block w-100" alt="..." />
+                <img src="./images/slider1.jpg" class="d-block w-100" alt="..." />
                 <div class="carousel-caption d-none d-md-block carousel-text">
                     <h5>WorkHub Centralga xush kelibsiz</h5>
                     <p>
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../images/slider2.jpg" class="d-block w-100" alt="..." />
+                <img src="./images/slider2.jpg" class="d-block w-100" alt="..." />
                 <div class="carousel-caption d-none d-md-block carousel-text">
                     <h5>Moslashuvchan ish joylari</h5>
                     <p>
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../images/slider3.jpg" class="d-block w-100" alt="..." />
+                <img src="./images/slider3.jpg" class="d-block w-100" alt="..." />
                 <div class="carousel-caption d-none d-md-block carousel-text">
                     <h5>Bizning hamjamiyatimizga qo'shiling</h5>
                     <p>
@@ -111,13 +111,13 @@
                     data-bs-interval="2000">
                     <div class="carousel-inner carousel-inner-2">
                         <div class="carousel-item active">
-                            <img src="../images/service1.avif" class="d-block" alt="...">
+                            <img src="./images/service1.avif" class="d-block" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="../images/service2.jpg" class="d-block" alt="...">
+                            <img src="./images/service2.jpg" class="d-block" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="../images/service3.jpg" class="d-block" alt="...">
+                            <img src="./images/service3.jpg" class="d-block" alt="...">
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                 <div class="serv-column">
                     <div class="serv-col">
                         <div class="serv-col-right">
-                            <img src="../images/clock.png" alt="">
+                            <img src="./images/clock.png" alt="">
                         </div>
                         <div class="serv-col-left">
                             <h6>24/7 foydalanish</h6>
@@ -142,7 +142,7 @@
                     </div>
                     <div class="serv-col">
                         <div class="serv-col-right">
-                            <img src="../images/snack.png" alt="">
+                            <img src="./images/snack.png" alt="">
                         </div>
                         <div class="serv-col-left">
                             <h6>Bepul qahva, choy va sneklar</h6>
@@ -151,7 +151,7 @@
                     </div>
                     <div class="serv-col">
                         <div class="serv-col-right">
-                            <img src="../images/joystick.png" alt="">
+                            <img src="./images/joystick.png" alt="">
                         </div>
                         <div class="serv-col-left">
                             <h6>Game Zone-dan rohatlaning</h6>
@@ -181,7 +181,7 @@
                 <div class="idea-col">
                     <div class="idea-col-top">
                         <div class="left">
-                            <img src="../images/person-1.png" alt="">
+                            <img src="./images/person-1.png" alt="">
                         </div>
                         <div class="right">
                             <h5>Celine Dion</h5>
@@ -201,7 +201,7 @@
                 <div class="idea-col">
                     <div class="idea-col-top">
                         <div class="left">
-                            <img src="../images/person-2.png" alt="">
+                            <img src="./images/person-2.png" alt="">
                         </div>
                         <div class="right">
                             <h5>Riana Madiva</h5>
@@ -221,7 +221,7 @@
                 <div class="idea-col">
                     <div class="idea-col-top">
                         <div class="left">
-                            <img src="../images/person-3.png" alt="">
+                            <img src="./images/person-3.png" alt="">
                         </div>
                         <div class="right">
                             <h5>John Melon</h5>
@@ -254,58 +254,58 @@
     <div class="slider3">
         <div class="slide-track3">
             <div class="slide3">
-                <img src="../images/room1.jpg" alt="">
+                <img src="./images/room1.jpg" alt="">
             </div>
             <div class="slide3">
-                <img src="../images/room2.jpg" alt="">
+                <img src="./images/room2.jpg" alt="">
             </div>
             <div class="slide3">
-                <img src="../images/room3.jpg" alt="">
+                <img src="./images/room3.jpg" alt="">
             </div>
             <div class="slide3">
-                <img src="../images/room4.jpg" alt="">
+                <img src="./images/room4.jpg" alt="">
             </div>
             <div class="slide3">
-                <img src="../images/room5.jpg" alt="">
+                <img src="./images/room5.jpg" alt="">
             </div>
             <div class="slide3">
-                <img src="../images/room6.jpg" alt="">
+                <img src="./images/room6.jpg" alt="">
             </div>
             <div class="slide3">
-                <img src="../images/room7.webp" alt="">
+                <img src="./images/room7.webp" alt="">
             </div>
             <div class="slide3">
-                <img src="../images/room8.jpg" alt="">
+                <img src="./images/room8.jpg" alt="">
             </div>
             <div class="slide3">
-                <img src="../images/room9.jpg" alt="">
+                <img src="./images/room9.jpg" alt="">
             </div>
             <div class="slide3">
-                <img src="../images/room10.webp" alt="">
+                <img src="./images/room10.webp" alt="">
             </div>
             <div class="slide3">
-                <img src="../images/room11.jpg" alt="">
+                <img src="./images/room11.jpg" alt="">
             </div>
             <div class="slide3">
-                <img src="../images/room12.jpg" alt="">
+                <img src="./images/room12.jpg" alt="">
             </div>
             <div class="slide3">
-                <img src="../images/room13.jpg" alt="">
+                <img src="./images/room13.jpg" alt="">
             </div>
             <div class="slide3">
-                <img src="../images/room14.avif" alt="">
+                <img src="./images/room14.avif" alt="">
             </div>
             <div class="slide3">
-                <img src="../images/room15.jpg" alt="">
+                <img src="./images/room15.jpg" alt="">
             </div>
             <div class="slide3">
-                <img src="../images/room16.jpg" alt="">
+                <img src="./images/room16.jpg" alt="">
             </div>
             <div class="slide3">
-                <img src="../images/room17.jpg" alt="">
+                <img src="./images/room17.jpg" alt="">
             </div>
             <div class="slide3">
-                <img src="../images/room18.jpg" alt="">
+                <img src="./images/room18.jpg" alt="">
             </div>
         </div>
     </div>
@@ -320,7 +320,7 @@
                 <a href="#">Ko'proq bilish</a>
             </div>
             <div class="services-right">
-                <img src="../images/services.png" alt="">
+                <img src="./images/services.png" alt="">
             </div>
         </div>
     </div>
@@ -329,7 +329,7 @@
     <div id="imtiyozlar" class="container">
         <div class="benefits">
             <div class="benefits-left">
-                <img src="../images/imtiyoz.png" alt="">
+                <img src="./images/imtiyoz.png" alt="">
             </div>
             <div class="benefits-right">
                 <h1>Oltinga teng Imtiyozlar</h1>
