--- a/signup/signup.html
+++ b/signup/signup.html
@@ -65,9 +65,11 @@
         <!-- loader js-->
         <script>
             var load = document.getElementById("load");
-                window.addEventListener('load', function() {
+            window.addEventListener('load', function() {
+                setTimeout(() => {
                     load.style.display = "none";
-                });
+                }, 4000);
+            });
         </script>
     </body>
 </html>
