--- a/index.html
+++ b/index.html
@@ -522,7 +522,9 @@
      <script>
         var load = document.getElementById("load");
             window.addEventListener('load', function() {
-                load.style.display = "none";
+                setTimeout(() => {
+                    load.style.display = "none";
+                }, 4000);
             });
      </script>
 
