--- a/login/login.html
+++ b/login/login.html
@@ -59,9 +59,10 @@
         <script>
             var load = document.getElementById("load");
             window.addEventListener('load', function() {
+                window.scrollTo(0, 0);
                 setTimeout(() => {
                     load.style.display = "none";
-                }, 3000);
+                }, 4000);
             });
         </script>
     </body>
