--- a/signup/signup.html
+++ b/signup/signup.html
@@ -66,6 +66,7 @@
         <script>
             var load = document.getElementById("load");
             window.addEventListener('load', function() {
+                window.scrollTo(0, 0);
                 setTimeout(() => {
                     load.style.display = "none";
                 }, 4000);
