services and faq

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 
     <!-- fontawesome link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="../images/favicon.png">
@@ -41,7 +43,7 @@
                 <li><a href="#sharoitlar">Sharoitlar</a></li>
                 <li><a href="#fikrlar">Fikrlar</a></li>
                 <li><a href="#xizmatlar">Xizmatlarimiz</a></li>
-                <li><a href="#imtiyozlar">Imtiyozlar</a></li>
+                <li><a href="#FAQ">FAQ</a></li>
                 <li><a href="#tolovlar">To'lovlar</a></li>
                 <li><a href="./login/login.html" class="entrance">Kirish</a></li>
             </ul>
@@ -314,8 +316,9 @@
         <div class="services">
             <div class="services-left">
                 <h1>Qo'shimcha xizmatlar</h1>
-                <p>Bizning qo'shimcha xizmatlarimiz mijozlarga tezkor internet, qulay konferens-zallar va dam olish hududlari bilan yordam beradi.</p>
-                <a href="#">Ko'proq bilish</a>
+                <p>Bizning qo'shimcha xizmatlarimiz mijozlarga tezkor internet, qulay konferens-zallar va dam olish
+                    hududlari bilan yordam beradi.</p>
+                <a href="./services/services.html">Ko'proq bilish</a>
             </div>
             <div class="services-right">
                 <img src="./images/services.png" alt="">
@@ -323,16 +326,17 @@
         </div>
     </div>
 
-    <!-- imtiyozlar -->
-    <div id="imtiyozlar" class="container">
+    <!-- FAQ -->
+    <div id="FAQ" class="container">
         <div class="benefits">
             <div class="benefits-left">
                 <img src="./images/imtiyoz.png" alt="">
             </div>
             <div class="benefits-right">
-                <h1>Oltinga teng Imtiyozlar</h1>
-                <p>Oltinga teng Imtiyozlar bu A'zolik imtiyozlari</p>
-                <a href="#">Ko'proq bilish</a>
+                <h1>Ko'p beriladigan savollar</h1>
+                <p>Bu bo'limda sizni qiziqtirgan eng tez-tez beriladigan savollar va ularga javoblarni topishingiz
+                    mumkin. Agar savolingizni topa olmasangiz, biz bilan bog'laning va yordam olishdan tortinmang!</p>
+                <a href="./faq/faq.html">Ko'proq bilish</a>
             </div>
         </div>
     </div>
@@ -342,7 +346,8 @@
         <div class="subscribe-column">
             <div class="column-text">
                 <h1>Ishingiz uchun qulay rejani tanlang!</h1>
-                <p>Har bir reja sizning ish ehtiyojlaringizga moslashtirilgan! Bugun ro'yxatdan o'ting va coworking dunyosiga qo'shiling!</p>
+                <p>Har bir reja sizning ish ehtiyojlaringizga moslashtirilgan! Bugun ro'yxatdan o'ting va coworking
+                    dunyosiga qo'shiling!</p>
             </div>
             <div class="column-half">
                 <div class="subscribe-col col-1">
@@ -386,7 +391,7 @@
                             <p>Maksimal qulaylik va xotirjamlik</p>
                         </div>
                     </div>
-                    <button class="col-button">Obuna</button>
+                    <button onclick="alert('Siz obunani faollashtirdingiz')" class="col-button">Obuna</button>
                 </div>
                 <div class="subscribe-col col-2">
                     <div class="col-text">
@@ -400,7 +405,8 @@
                             <p>6M so'm</p>
                         </div>
                         <div class="text">
-                            <p>Popular reja kengroq imkoniyatlar va qo'shimcha xizmatlarni izlayotganlar uchun mo‘ljallangan.</p>
+                            <p>Popular reja kengroq imkoniyatlar va qo'shimcha xizmatlarni izlayotganlar uchun
+                                mo‘ljallangan.</p>
                         </div>
                     </div>
                     <div class="col-check-text">
@@ -429,7 +435,7 @@
                             <p>Kunlik yoki oylik to'lov imkoniyati</p>
                         </div>
                     </div>
-                    <button class="col-button">Obuna</button>
+                    <button onclick="alert('Siz obunani faollashtirdingiz')" class="col-button">Obuna</button>
                 </div>
                 <div class="subscribe-col col-3">
                     <div class="col-text">
@@ -439,7 +445,8 @@
                             15k so'm <span>/kunlik</span>
                         </h1>
                         <div class="text">
-                            <p>Oddiy reja ishni boshlashni xohlaganlar yoki vaqtinchalik qulay joy izlayotganlar uchun ajoyib tanlovdir.</p>
+                            <p>Oddiy reja ishni boshlashni xohlaganlar yoki vaqtinchalik qulay joy izlayotganlar uchun
+                                ajoyib tanlovdir.</p>
                         </div>
                     </div>
                     <div class="col-check-text">
@@ -462,14 +469,14 @@
                         <div class="check-text">
                             <i class="fa-solid fa-check"></i>
                             <p>Kichik uchrashuvlar uchun umumiy joy</p>
-    
+
                         </div>
                         <div class="check-text">
                             <i class="fa-solid fa-check"></i>
                             <p>Arzon va qulay narxlar</p>
                         </div>
                     </div>
-                    <button class="col-button">Obuna</button>
+                    <button onclick="alert('Siz obunani faollashtirdingiz')" class="col-button">Obuna</button>
                 </div>
             </div>
         </div>
@@ -482,7 +489,8 @@
             <div class="footer-column">
                 <div class="footer-col">
                     <div class="logo"><a href="./index.html">WorkHub</a></div>
-                    <p>Kovorking joylarimiz qulay, zamonaviy, ijodiy, inspiratsion, do'stona, samarali, innovatsion, quvnoq, toza, osoyishta, tezkor.</p>
+                    <p>Kovorking joylarimiz qulay, zamonaviy, ijodiy, inspiratsion, do'stona, samarali, innovatsion,
+                        quvnoq, toza, osoyishta, tezkor.</p>
                     <form>
                         <p>Jamoamizga qo'shiling</p>
                         <input id="email" autocomplete="email" required type="email" placeholder="Emailingizni yozing">
@@ -496,7 +504,7 @@
                         <li><a href="#sharoitlar">Sharoitlar</a></li>
                         <li><a href="#fikrlar">Fikrlar</a></li>
                         <li><a href="#xizmatlar">Xizmatlarimiz</a></li>
-                        <li><a href="#imtiyozlar">Imtiyozlar</a></li>
+                        <li><a href="#FAQ">FAQ</a></li>
                         <li><a href="#tolovlar">To'lovlar</a></li>
                     </ul>
                 </div>
@@ -517,16 +525,16 @@
     <script src="./script.js"></script>
 
     <!-- loader js-->
-     <script>
+    <script>
         var load = document.getElementById("load");
-        window.addEventListener('load', function() {
+        window.addEventListener('load', function () {
             window.scrollTo(0, 0);
             setTimeout(() => {
                 load.style.display = "none";
             }, 4000);
         });
 
-     </script>    
+    </script>
 </body>
 
 </html>
