--- a/services/services.html
+++ b/services/services.html
@@ -1,34 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Email Validation</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Qo'shimcha Xizmatlar</title>
+
+  <!-- Bootstrap link -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
+  <!-- css link -->
+  <link rel="stylesheet" href="./services.css" />
+
+  <!-- boxicons link -->
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+
+  <!-- fontawesome link -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- favicon -->
+  <link rel="icon" type="image/x-icon" href="../images/favicon.png">
+
 </head>
+
 <body>
-  <form id="emailForm">
-    <label for="email">Email:</label>
-    <input type="email" id="email" required>
-    <!-- A tagini tugma sifatida ishlatish -->
-    <a href="#" id="submitBtn" style="padding: 10px; background-color: #4CAF50; color: white; text-decoration: none; cursor: pointer;">Submit</a>
-  </form>
+  <!-- loader -->
+  <div id="load"></div>
 
-  <script>
-    const emailInput = document.getElementById('email');
-    const submitBtn = document.getElementById('submitBtn');
+  <!-- HEADER -->
 
-    // Input o'zgarganda tugma faolligini boshqarish
-    emailInput.addEventListener('input', () => {
-      submitBtn.style.pointerEvents = emailInput.value.trim() ? 'auto' : 'none'; // A tagini faollashtirish yoki bloklash
-    });
+  <header>
+    <nav>
+      <div class="logo"><a href="./index.html">WorkHub</a></div>
+      <input type="checkbox" id="check" />
+      <label for="check">
+        <i class="bx bx-menu-alt-right" id="menu"></i>
+      </label>
+      <ul>
+        <li><a href="../index.html">Bosh Sahifa</a></li>
+        <li><a href="../index.html#sharoitlar">Sharoitlar</a></li>
+        <li><a href="../index.html#fikrlar">Fikrlar</a></li>
+        <li><a href="../index.html#xizmatlar">Xizmatlarimiz</a></li>
+        <li><a href="../index.html#FAQ">FAQ</a></li>
+        <li><a href="../index.html#tolovlar">To'lovlar</a></li>
+        <li><a href="../login/login.html" class="entrance">Kirish</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    // A tagini bosganda formani yuborish
-    submitBtn.addEventListener('click', (event) => {
-      event.preventDefault(); // Havola ustiga bosilsa, sahifani yangilanishini oldini olish
-      alert('Email sent successfully!');
-      emailInput.value = '';
-      submitBtn.style.pointerEvents = 'none'; // A tagini bloklash
-    });
-  </script>
+  <!-- book -->
+  <div class="container">
+    <div class="book">
+      <h1>3 ta oddiy qadamda tez va oson bron qilish!</h1>
+
+      <div class="book-column">
+        <div class="book-col">
+          <img src="./images/select.png" alt="">
+          <h3>Xona tanlash</h3>
+          <p>Qulay va zamonaviy, ish samaradorligi uchun barcha sharoitlar yaratilgan ofislarni tanlang</p>
+        </div>
+        <div class="border-img">
+          <img src="./images/arrow1.png" alt="">
+        </div>
+        <div class="book-col">
+          <img src="./images/book.png" alt="">
+          <h3>Kuningizni bron qiling</h3>
+          <p>Bugungi ishlaringizni rejalang - joyingizni hoziroq bron qiling</p>
+        </div>
+        <div class="border-img">
+          <img src="./images/arrow2.png" alt="">
+        </div>
+        <div class="book-col">
+          <img src="./images/relax.png" alt="">
+          <h3>Hotirjam bo'ling</h3>
+          <p>Xotirjam bo'ling - bizning ofislarimizda barcha qulayliklar sizni kutmoqda</p>
+        </div>
+      </div>
+      <a href="#" onclick="alert('Bron qilish xizmati ishlamayapti ❌')">Bron qilish</a>
+    </div>
+
+    <!-- addition services -->
+    <div class="container">
+      <div class="addition-services">
+        <h1>Taklif etilgan xizmatlar</h1>
+        <div class="add-services-column">
+          <div class="add-services-col">
+            <div class="add-services-col-top">
+              <img src="./images/room1.jpg" alt="">
+            </div>
+            <div class="add-services-col-center">
+              <h6>Ish maydoni</h6>
+              <h3>Ish uchun qulaylik</h3>
+              <ul>
+                <li><i class='bx bx-check-circle'></i>Kundalik foydalanish uchun</li>
+                <li><i class='bx bx-check-circle'></i>Maxsus shaxsiy ish stollari</li>
+                <li><i class='bx bx-check-circle'></i>2-10 kishilik jamoalar uchun shaxsiy ofislar</li>
+              </ul>
+            </div>
+          </div>
+          <div class="add-services-col">
+            <div class="add-services-col-top">
+              <img src="./images/room2.jpg" alt="">
+            </div>
+            <div class="add-services-col-center">
+              <h6>Meeting xonalari</h6>
+              <h3>Samarali uchrashuvlar joyi</h3>
+              <ul>
+                <li><i class='bx bx-check-circle'></i>Shaxsiy meeting lar uchun kichik xonalar</li>
+                <li><i class='bx bx-check-circle'></i>Videokonferensiya vositalariga ega katta konferentsiya zallari
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="add-services-col">
+            <div class="add-services-col-top">
+              <img src="./images/room3.jpg" alt="">
+            </div>
+            <div class="add-services-col-center">
+              <h6>Sharoitlar</h6>
+              <h3>Siz uchun qulay sharoitlar</h3>
+              <ul>
+                <li><i class='bx bx-check-circle'></i>Yuqori tezlikdagi Wi-Fi</li>
+                <li><i class='bx bx-check-circle'></i>Bepul qahva, choy va sneklar</li>
+                <li><i class='bx bx-check-circle'></i>Chop etish va skanerlash xizmatlari</li>
+                <li><i class='bx bx-check-circle'></i>Sokin zonalar va brainstorming zonalari</li>
+              </ul>
+            </div>
+          </div>
+          <div class="add-services-col">
+            <div class="add-services-col-top">
+              <img src="./images/room4.jpg" alt="">
+            </div>
+            <div class="add-services-col-center">
+              <h6>A'zolik imtiyozlari</h6>
+              <h3>A'zolarga maxsus imtiyozlar</h3>
+              <ul>
+                <li><i class='bx bx-check-circle'></i>Haftalik tanishuv tadbirlari</li>
+                <li><i class='bx bx-check-circle'></i>Biznesni rivojlantirish bo'yicha seminarlar</li>
+                <li><i class='bx bx-check-circle'></i>A'zolarning onlayn jamiyatiga qo'shilish</li>
+              </ul>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <!-- footer -->
+
+    <footer>
+      <div class="container">
+        <div class="footer-column">
+          <div class="footer-col">
+            <div class="logo"><a href="../index.html">WorkHub</a></div>
+            <p>Kovorking joylarimiz qulay, zamonaviy, ijodiy, inspiratsion, do'stona, samarali, innovatsion, quvnoq,
+              toza, osoyishta, tezkor.</p>
+            <form>
+              <p>Jamoamizga qo'shiling</p>
+              <input id="email" autocomplete="email" required type="email" placeholder="Emailingizni yozing">
+              <button id="submitBtn">Qo'shilish</button>
+            </form>
+          </div>
+          <div class="footer-col">
+            <h2>Sahifalar</h2>
+            <ul>
+              <li><a href="../index.html">Bosh Sahifa</a></li>
+              <li><a href="../index.html#sharoitlar">Sharoitlar</a></li>
+              <li><a href="../index.html#fikrlar">Fikrlar</a></li>
+              <li><a href="../index.html#xizmatlar">Xizmatlarimiz</a></li>
+              <li><a href="../index.html#FAQ">FAQ</a></li>
+              <li><a href="../index.html#tolovlar">To'lovlar</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h2>Tarmoqlar</h2>
+            <ul>
+              <li><a target="_blank" href="https://www.facebook.com/">Facebook</a></li>
+              <li><a target="_blank" href="https://www.instagram.com/">Instagram</a></li>
+              <li><a target="_blank" href="https://www.github.com/">GitHub</a></li>
+              <li><a target="_blank" href="https://www.linkedin.com/">LinkedIn</a></li>
+              <li><a target="_blank" href="https://www.youtube.com/">YouTube</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- loader js-->
+    <script>
+      var load = document.getElementById("load");
+      window.addEventListener('load', function () {
+        window.scrollTo(0, 0);
+        setTimeout(() => {
+          load.style.display = "none";
+        }, 4000);
+      });
+
+    </script>
 </body>
+
 </html>
