--- a/signup/signup.html
+++ b/signup/signup.html
@@ -1,76 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>WorkHub Central Login</title>
-        <!-- google fonts link -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-        <!-- css link -->
-        <link rel="stylesheet" href="./signup.css">
-        <!-- favicon link -->
-        <link rel="icon" type="image/x-icon" href="../images/favicon.png">
-    
-    </head>
-    <body>
-        <!-- load -->
-        <div id="load"></div>
 
-        <form action="#">
-            <div class="form-left">
-                <img src="../images/room11.jpg" title="form-left-img" alt="form-left-img">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WorkHub Central Login</title>
+    <!-- google fonts link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <!-- css link -->
+    <link rel="stylesheet" href="./signup.css">
+    <!-- favicon link -->
+    <link rel="icon" type="image/x-icon" href="../images/favicon.png">
+
+</head>
+
+<body>
+    <!-- load -->
+    <div id="load"></div>
+
+    <form action="#">
+        <div class="form-left">
+            <img src="../images/room11.jpg" title="form-left-img" alt="form-left-img">
+        </div>
+        <div class="form-right">
+            <div class="form-right-text">
+                <h1>Hisob yarating</h1>
             </div>
-            <div class="form-right">
-                <div class="form-right-text">
-                    <h1>Hisob yarating</h1>
+            <label for="FirstName">
+                <h5>Ism</h5>
+                <input name="FirstName" type="text" required>
+            </label>
+            <label for="LastName">
+                <h5>Familya</h5>
+                <input name="LastName" type="text" required>
+            </label>
+            <label for="email">
+                <h5>Email</h5>
+                <input name="email" type="email" required placeholder="John.snow@gmail.com">
+            </label>
+            <label for="password">
+                <h5>Parol</h5>
+                <input name="password" type="password" required placeholder="********">
+            </label>
+            <div class="form-right-flex">
+                <div class="remember-me">
+                    <input type="radio" required title="Eslab qol">
+                    <h6>Eslab qol</h6>
                 </div>
-                <label for="FirstName">
-                    <h5>Ism</h5>
-                    <input name="FirstName" type="text" required>
-                </label>
-                <label for="LastName">
-                    <h5>Familya</h5>
-                    <input name="LastName" type="text" required>
-                </label>
-                <label for="email">
-                    <h5>Email</h5>
-                    <input name="email" type="email" required placeholder="John.snow@gmail.com">
-                </label>
-                <label for="password">
-                    <h5>Parol</h5>
-                    <input name="password" type="password" required placeholder="********">
-                </label>
-                <div class="form-right-flex">
-                    <div class="remember-me">
-                        <input type="radio" required title="Eslab qol">
-                        <h6>Eslab qol</h6>
-                    </div>
 
-                </div>
-                <div class="form-button">
-                    <a type="submit" title="Ro'yxatdan o'tish">Ro'yxatdan o'tish</a>
-                    <a href="../login/login.html" type="submit" title="Hisob bormi">
-                        Hisob bormi
-                    </a>
-                </div>
-                <div class="dont-account">
-                    <a href="../index.html" title="Bosh sahifa">Bosh sahifa</a>
-                </div>
             </div>
-        </form>
+            <div class="form-button">
+                <a type="submit" title="Ro'yxatdan o'tish" onclick="alert('Ishlanmoqda...')">Ro'yxatdan o'tish</a>
+                <a href="../login/login.html" type="submit" title="Hisob bormi">
+                    Hisob bormi
+                </a>
+            </div>
+            <div class="dont-account">
+                <a href="../index.html" title="Bosh sahifa">Bosh sahifa</a>
+            </div>
+        </div>
+    </form>
 
-        <!-- loader js-->
-        <script>
-            var load = document.getElementById("load");
-            window.addEventListener('load', function() {
-                window.scrollTo(0, 0);
-                setTimeout(() => {
-                    load.style.display = "none";
-                }, 4000);
-            });
-        </script>
-    </body>
+    <!-- loader js-->
+    <script>
+        var load = document.getElementById("load");
+        window.addEventListener('load', function () {
+            window.scrollTo(0, 0);
+            setTimeout(() => {
+                load.style.display = "none";
+            }, 4000);
+        });
+    </script>
+</body>
+
 </html>
