--- a/login/login.html
+++ b/login/login.html
@@ -33,10 +33,12 @@
             <label for="email">
                 <h5>Email</h5>
                 <input name="email" type="email" required placeholder="John.snow@gmail.com">
+                <span></span>
             </label>
             <label for="password">
                 <h5>Parol</h5>
                 <input name="password" type="password" required placeholder="********">
+                <span></span>
             </label>
             <div class="form-right-flex">
                 <div class="remember-me">
@@ -48,7 +50,7 @@
                 </div>
             </div>
             <div class="form-button">
-                <a type="submit" onclick="alert('Ishlanmoqda...')" title="Hozir kirish">Hozir kirish</a>
+                <button type="submit" title="Hozir kirish">Hozir kirish</button>
                 <a href="../signup/signup.html" title="Hisob yo'qmi ?">
                     Hisob yo'qmi ?
                 </a>
