--- a/signup/signup.html
+++ b/signup/signup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WorkHub Central Login</title>
+    <title>WorkHub Central Signup</title>
     <!-- google fonts link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,18 +34,22 @@
             <label for="FirstName">
                 <h5>Ism</h5>
                 <input name="FirstName" type="text" required>
+                <span></span>
             </label>
             <label for="LastName">
                 <h5>Familya</h5>
                 <input name="LastName" type="text" required>
+                <span></span>
             </label>
             <label for="email">
                 <h5>Email</h5>
                 <input name="email" type="email" required placeholder="John.snow@gmail.com">
+                <span></span>
             </label>
             <label for="password">
                 <h5>Parol</h5>
                 <input name="password" type="password" required placeholder="********">
+                <span></span>
             </label>
             <div class="form-right-flex">
                 <div class="remember-me">
@@ -55,7 +59,7 @@
 
             </div>
             <div class="form-button">
-                <a type="submit" title="Ro'yxatdan o'tish" onclick="alert('Ishlanmoqda...')">Ro'yxatdan o'tish</a>
+                <button type="submit" title="Ro'yxatdan o'tish">Ro'yxatdan o'tish</button>
                 <a href="../login/login.html" type="submit" title="Hisob bormi">
                     Hisob bormi
                 </a>
