a litte mistakes change

--- a/faq/faq.html
+++ b/faq/faq.html
@@ -235,7 +235,7 @@
         <div class="container">
             <div class="footer-column">
                 <div class="footer-col">
-                    <div class="logo"><a href="../index.html">WorkHub</a></div>
+                    <div class="logo"><a href="./faq.html">WorkHub</a></div>
                     <p>Kovorking joylarimiz qulay, zamonaviy, ijodiy, inspiratsion, do'stona, samarali, innovatsion,
                         quvnoq, toza, osoyishta, tezkor.</p>
                     <form>
